--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -14,7 +14,39 @@ html,body {
     overflow-x: hidden; 
 }
 
-body {
-    background-color: #0C1423;
+.wrapper {
+    max-width: 1280px;
+    width: 100%;
+    margin: 0 auto;
 }
 
+header {
+    background-color: red;
+    height: 100vh;
+}
+
+form {
+    text-align: center;
+}
+
+input[type='radio'] {
+    width: 100%;
+}
+
+.flexWrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+}
+
+.box {
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+
+    label, input {
+        padding: 10px;
+    }
+}
