--- a/styles/sass/main.css
+++ b/styles/sass/main.css
@@ -229,7 +229,52 @@ html, body {
   overflow-x: hidden;
 }
 
-body {
-  background-color: #0C1423;
+.wrapper {
+  max-width: 1280px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+header {
+  background-color: red;
+  height: 100vh;
+}
+
+form {
+  text-align: center;
+}
+
+input[type='radio'] {
+  width: 100%;
+}
+
+.flexWrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 50px;
+}
+
+.box label, .box input {
+  padding: 10px;
 }
 /*# sourceMappingURL=main.css.map */
